--- a/ocpfile.yml
+++ b/ocpfile.yml
@@ -62,7 +62,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: chandray/multitierapp:latest
+        image: chandray/openshiftpush:latest
         ports:
         - containerPort: 8080
         env:
